# LLMterface

./: README.md  pyproject.toml
.github/wokrflows/: llmterface-publish-on-tag.yml
.github/workflows/: llmterface-gemini-publish-on-tag.yml
testing/: conftest.py
testing/helpers/: fakes.py
testing/tests/: test_chat.py  test_handler.py  test_providers.py  test_readme.py  test_smoke.py
testing/tests/providers/gemini/: test_config.py  test_gemini_chat.py  test_gemini_config.py  test_gemini_readme.py
