[project]
name = "llmterface-dev"
version = "0.0.0"
description = "Development harness for LLMterface"
requires-python = ">=3.11,<4.0"
dependencies = [
  "llmterface[all]",
  "python-dotenv>=1.2.1,<2.0.0",
  "pytest>=7.4.3,<8.0.0",
  "black>=24.2.1,<25.0.0",
  "hypothesis>=6.148.9",
  "ipython>=9.8.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/llmterface", "packages/llmterface_gemini"]

[tool.uv.sources]
llmterface = { workspace = true }
llmterface-gemini = { workspace = true }

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["testing/tests"]
pythonpath = ["packages/llmterface", "packages/llmterface_gemini"]
log_cli = true
log_cli_level = "INFO"
