[project]
name = "llmterface-dev"
version = "0.0.0"
description = "Development harness for LLMterface"
requires-python = ">=3.12,<4.0"
dependencies = [
  "llmterface[all]",
  "python-dotenv>=1.2.1,<2.0.0",
  "pytest>=7.4.3,<8.0.0",
  "hypothesis>=6.148.9",
  "ipython>=9.8.0",
  "ruff>=0.14.13",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/llmterface", "packages/llmterface_gemini"]

[tool.uv.sources]
llmterface = { workspace = true }
llmterface-gemini = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (formatter handles this)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
minversion = "7.0"
testpaths = ["testing/tests"]
pythonpath = ["packages"]
log_cli = true
log_cli_level = "INFO"

